# AI4SE

./: .gitignore  AGENT_LOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  e2e.yml
docs/submission/: REFLECTION.md  SPEC_AND_PLAN_SUMMARY.md  SPEC_PROCESS.md  SUBMISSION_REPORT.md
docs/superpowers/plans/: 2026-06-01-mini-coding-agent-tui.md  2026-06-13-system-prompt.md  2026-06-13-tui-beautification.md
docs/superpowers/specs/: 2026-06-01-mini-coding-agent-tui-design.md  2026-06-13-system-prompt-design.md  2026-06-13-tui-beautification-design.md
scripts/: mock_anthropic.py
src/miniagent/: __main__.py  agent.py  config.py  llm.py  session.py  tools.py  tui.css  tui.py
tests/: conftest.py
tests/e2e/: test_docker_smoke.py
tests/integration/: test_tui.py
tests/unit/: test_agent.py  test_config.py  test_llm.py  test_main.py  test_session.py  test_tools.py
