[project]
name = "mini-agent"
version = "0.1.0"
description = "Mini coding agent TUI"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40,<1.0",
    "textual>=0.80,<1.0",
    "pydantic>=2.5,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "freezegun>=1.5",
    "ruff>=0.6",
    "mypy>=1.10",
]

[project.scripts]
miniagent = "miniagent.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/miniagent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "e2e: end-to-end tests (require Docker, run manually)",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "ASYNC"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src/miniagent"]
